--- a/firebase.json
+++ b/firebase.json
@@ -11,6 +11,20 @@
         "*.local"
       ],
       "predeploy": []
+    },
+    {
+      "source": "functions1",
+      "codebase": "default1",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log",
+        "*.local"
+      ],
+      "predeploy": [
+        "npm --prefix \"$RESOURCE_DIR\" run lint"
+      ]
     }
   ],
   "hosting": {
