--- a/functions/package.json
+++ b/functions/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "Hantverksportalen - Din digitala hjälpreda",
   "main": "server.mjs",
-  "scripts": {
-    "start": "node server.mjs"
-  },
+"scripts": {
+  "lint": "eslint .",
+  "start": "node server.mjs"
+},
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -17,10 +18,5 @@
   },
   "author": "Oscar",
   "license": "ISC",
-  "type": "module",
-  "devDependencies": {
-    "@eslint/js": "^9.19.0",
-    "eslint": "^9.19.0",
-    "globals": "^15.14.0"
-  }
+  "type": "module"
 }
