--- a/functions/package.json
+++ b/functions/package.json
@@ -1,22 +1,26 @@
 {
-  "name": "hantverksportalen",
-  "version": "1.0.0",
-  "description": "Hantverksportalen - Din digitala hjälpreda",
-  "main": "server.mjs",
-"scripts": {
-  "lint": "eslint .",
-  "start": "node server.mjs"
-},
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "firebase": "^11.2.0",
-    "firebase-admin": "^13.0.2"
+  "name": "functions",
+  "description": "Cloud Functions for Firebase",
+  "scripts": {
+    "lint": "eslint .",
+    "serve": "firebase emulators:start --only functions",
+    "shell": "firebase functions:shell",
+    "start": "npm run shell",
+    "deploy": "firebase deploy --only functions",
+    "logs": "firebase functions:log"
   },
-  "author": "Oscar",
-  "license": "ISC",
-  "type": "module"
+  "engines": {
+    "node": "22"
+  },
+  "main": "index.js",
+  "dependencies": {
+    "firebase-admin": "^12.6.0",
+    "firebase-functions": "^6.0.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.15.0",
+    "eslint-config-google": "^0.14.0",
+    "firebase-functions-test": "^3.1.0"
+  },
+  "private": true
 }
